chore: Update shapes, structure, typography, header, footer, and navigation styles

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -1,17 +1,16 @@
 .main-navigation {
-	clear: both;
-	display: block;
-	float: left;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	width: 100%;
 
-	ul {
+	.nav-menu {
 		display: none;
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
 
 		ul {
-			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 			float: left;
 			position: absolute;
 			top: 100%;
@@ -76,12 +75,14 @@
 	display: block;
 }
 
-@media screen and (min-width: 37.5em) {
+@include breakpoint($mediumlarge) {
 	.menu-toggle {
 		display: none;
 	}
-	.main-navigation ul {
-		display: block;
+	.main-navigation .nav-menu {
+		display: flex;
+		gap: 20px;
+		margin-right: 20px;
 	}
 }
 
@@ -103,5 +104,11 @@
 		float: right;
 		text-align: right;
 		width: 50%;
+	}
+}
+
+.hamburger {
+	strong {
+		display: none;
 	}
 }
