--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -1,7 +1,10 @@
-$tdc_primary: #E94D27;
-$electric_blue: #37c4ff;
+$color_primary: #FD832F;
+$color_secondary: #EEE4D7;
 
-$color__background-body: #f2f2f2;
+$off_white: #FFF6E9;
+$dark_grey: #252627;
+
+$color__background-body: #252627;
 $color__background-screen: #f1f1f1;
 $color__background-hr: #ccc;
 $color__background-button: #e6e6e6;
@@ -11,10 +14,10 @@ $color__background-ins: #fff9c0;
 $color__text-screen: #21759b;
 $color__text-input: #666;
 $color__text-input-focus: #111;
-$color__link: $tdc_primary;
+$color__link: $color_primary;
 $color__link-visited: purple;
-$color__link-hover: $electric_blue;
-$color__text-main: #404040;
+$color__link-hover: $color_primary;
+$color__text-main: #FFF6E9;
 
 $color__border-button: #ccc #ccc #bbb;
 $color__border-button-hover: #ccc #bbb #aaa;
