--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 .site-footer {
-    background: black;
-    color: white;
+    background: $dark_grey;
+    color: $off_white;
 
     display:flex;
     justify-content: center;
@@ -16,11 +16,11 @@
     }
 
     a {
-        color: $tdc_primary;
+        color: $color_primary;
         transition: color 0.5s;
 
         &:hover {
-            color: $electric_blue;
+            color: $color_primary;
         }
     }
 }
