--- a/sass/layout/_social.scss
+++ b/sass/layout/_social.scss
@@ -3,10 +3,21 @@
     gap: 20px;
     align-items: center;
     padding: 0;
+    margin-bottom: 0;
+    list-style-type: none;
 
     img {
         height: 22px;
         width: auto;
+        filter: invert(93%) sepia(18%) saturate(159%) hue-rotate(350deg) brightness(98%) contrast(90%);
+    }
+
+    a {
+        transition: all 0.25s ease-in-out;
+
+        &:hover {
+            filter: brightness(0) saturate(100%) invert(52%) sepia(96%) saturate(900%) hue-rotate(339deg) brightness(103%) contrast(98%);
+        }
     }
 
     span {
