--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -1,14 +1,10 @@
 .main-navigation {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	align-items: stretch;
 	width: 100%;
 
 	.nav-menu {
-		display: none;
-		list-style: none;
-		margin: 0;
-		padding-left: 0;
 
 		ul {
 			float: left;
@@ -78,11 +74,6 @@
 @include breakpoint($mediumlarge) {
 	.menu-toggle {
 		display: none;
-	}
-	.main-navigation .nav-menu {
-		display: flex;
-		gap: 20px;
-		margin-right: 20px;
 	}
 }
 
