--- a/sass/variables-site/_shapes.scss
+++ b/sass/variables-site/_shapes.scss
@@ -1,1 +1,3 @@
 $pixel_arrow: polygon(0 0, 100% 0, 100% 50%, 66% 50%, 66% 100%, 33% 100%, 33% 50%, 0 50%);
+
+$footer_arrow: polygon(0 75%, 14.25% 75%, 14.25% 50%, 28.5% 50%, 28.5% 25%, 42.75% 25%, 42.75% 0, 57% 0, 57% 25%, 0 100%);
