chore: Update header and footer styles, add arrow shape to footer

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -79,6 +79,11 @@
                 padding: 0 18px;
             }
 
+            &:visited,
+            &:active {
+                color: $color_secondary;
+            }
+
             &:hover {
                 color: $color_primary;
             }
