--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -11,6 +11,20 @@
     align-items: center;
     text-align: center;
     padding-top: 100px;
+    position: relative;
+
+    &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 50%;
+        top: 0;
+        transform: translate(-49%, -99%);
+        height: 40px;
+        width: 70px;
+        background-color: $off_white;
+        clip-path: $large_arrow;
+    }
 
     p {
         margin: 0;
