--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,6 +36,7 @@ Text Domain: dekiru
 	'layout/header',
 	'layout/social',
 	'layout/home',
+	'layout/hero-banner',
 	'layout/about',
 	'layout/games',
 	'layout/game-single',
