--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,14 @@
-.main-navigation {
+.site-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
 	background-color: rgba(#252D31, 0.25);
+    backdrop-filter: blur(5px);
+}
+
+.main-navigation {
     text-transform: uppercase;
     font-weight: 700;
 
