--- a/sass/layout/_hero-banner.scss
+++ b/sass/layout/_hero-banner.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     aspect-ratio: 16/9;
+    margin-bottom: -28px;
     
     .background-image {
         position: absolute;
