tweaks to fox intro add news block (no scrolling yet)

--- a/sass/layout/_base.scss
+++ b/sass/layout/_base.scss
@@ -38,6 +38,7 @@ strong {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	overflow: hidden;
 
 	body.admin-bar & {
 		min-height: calc(100vh - 32px);
