--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -3,6 +3,7 @@ $color_secondary: #EEE4D7;
 
 $off_white: #FFF6E9;
 $dark_grey: #252627;
+$black: #111;
 
 $color__background-body: #252627;
 $color__background-screen: #f1f1f1;
