--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -19,7 +19,7 @@ input[type="submit"] {
 	align-items: center;
 
 	transition: all .5s;
-	filter: drop-shadow(0 0 5px rgba($color_primary, 0.5));
+	filter: drop-shadow(0 0 5px rgba($black, 0.5));
 
 	&:hover {
 		color: $off_white;
@@ -34,48 +34,73 @@ input[type="submit"] {
 }
 
 .fv-button {
+	@extend .button;
+	position: relative;
+	transition: all .15s ease-in-out;
+	margin: 0 10px 10px 0;
 
-	&::before {
-		@extend %test;
-			bottom: -15px;
-			height: 15px;
-			width: 100%;
-			left: 8px;
-			transform: skewX(45deg);
-			background-color: darken($color_primary, 20%);
-		}
-	
-		&::after {
-			@extend %test;
-			right: -15px;
-			height: 100%;
-			width: 15px;
-			bottom: -8px;
-			transform: skewY(45deg);
-			background-color: darken($color_primary, 20%);
-		}
-	
-		&:active {
-			margin-left: 10px;
-			margin-top: 10px;
+	&:before,
+	&:after {
+		content: '';
+		display: block;
+		position: absolute;
+		background-color: darken($color_primary, 10%);
+		transition: all .15s ease-in-out;
+	}
 
-			&::before {
-				bottom: -5px;
-				height: 5px;
-				left: 3px;
-			}
-			
-		&::after {
-				right: -5px;
-				width: 5px;
-				bottom: -3px;
-			}	
+	&:before {
+		top: 4px;
+		right: -10px;
+		height: 100%;
+		width: 10px;
+		transform: skewY(45deg);
+	}
+
+	&:after {
+		bottom: -10px;
+		left: 4px;
+		width: 100%;
+		height: 10px;
+		transform: skewX(45deg);
+	}
+
+	&:hover {
+		margin-top: 4px;
+		margin-left: 4px;
+		margin-right: 6px;
+		margin-bottom: 6px;
+		filter: drop-shadow(0 0 5px rgba($color_primary, 0.5));
+
+		&:before {
+			top: 3px;
+			right: -6px;
+			width: 6px;
 		}
+
+		&:after {
+			bottom: -6px;
+			left: 3px;
+			height: 6px;
+		}
+	}
+
+	&:active {
+		margin-top: 8px;
+		margin-left: 8px;
+		margin-right: 2px;
+		margin-bottom: 2px;
+		filter: drop-shadow(0 0 10px rgba($color_primary, 1));
+
+		&:before {
+			top: 1px;
+			right: -2px;
+			width: 2px;
+		}
+
+		&:after {
+			bottom: -2px;
+			left: 1px;
+			height: 2px;
+		}
+	}
 }
-
-%test {
-	position: absolute;
-	content: '';
-	transition: all .5s;
-}
-  
