--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -74,6 +74,7 @@
         align-items: flex-start;
         padding-left: 20px;
         aspect-ratio: 884 / 1228;
+        pointer-events: none;
         // outline: 1px dotted yellow;
 
         // white spotlight
@@ -114,6 +115,7 @@
 
 .news-scroll {
     background-color: $black;
+    position: relative;
 
     .news-block {
         @include breakpoint($mediumlarge) {
@@ -149,7 +151,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
-        padding: 4vw;
+        padding: clamp(40px, 2vw, 80px) clamp(40px, 2vw, 80px) 100px;
 
         @include breakpoint($mediumlarge) {
             max-width: 562px;
@@ -167,7 +169,138 @@
         .post-title {
             margin-bottom: 0.15rem;
             line-height: 1;
+            font-size: clamp(2rem, 1.0833rem + 2.4444vw, 3.375rem);
+        }
+    }
+
+    .slide-control {
+        width: 50vw;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        z-index: 2;
+        display: flex;
+        gap: 20px;
+        align-items: center;
+        padding: clamp(40px, 2vw, 80px);
+    }
+
+    .slide-navigation {
+        display: flex;
+        gap: 10px;
+
+        div[class^='button-'] {
+            display: block;
+            background-color: $mid_grey;
+            position: relative;
+            width: 56px;
+            height: 56px;
+            text-indent: -9999px;
+            font-size: 1px;
+            color: $dark_grey;
             
+            &:after {
+                content: '';
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                background: url(assets/images/arrow-down.svg) center center no-repeat;
+                background-size: 18px 12px;
+                transform: rotate(90deg);
+                filter: brightness(0.5);
+            }
+
+            &:nth-of-type(2) {
+                &:after {
+                    transform: rotate(-90deg);
+                }
+            }
+
+            &:hover {
+                &:after {
+                    filter: brightness(1) saturate(100%) invert(52%) sepia(96%) saturate(900%) hue-rotate(339deg) brightness(103%) contrast(98%);
+                }
+            }
+
+            span {
+                display: block;
+                // outline: 1px solid yellow;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                transition: all .15s ease-in-out;
+                margin: 0 10px 10px 0;
+
+                &:before,
+                &:after {
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    background-color: darken($mid_grey, 5%);
+                    transition: all .15s ease-in-out;
+                }
+
+                &:before {
+                    top: 4px;
+                    right: -10px;
+                    height: 100%;
+                    width: 10px;
+                    transform: skewY(45deg);
+                }
+
+                &:after {
+                    bottom: -10px;
+                    left: 4px;
+                    width: 100%;
+                    height: 10px;
+                    transform: skewX(45deg);
+                }
+
+                &:hover {
+                    margin-top: 4px;
+                    margin-left: 4px;
+                    margin-right: 6px;
+                    margin-bottom: 6px;
+                    filter: drop-shadow(0 0 5px rgba($mid_grey, 0.5));
+
+                    &:before {
+                        top: 3px;
+                        right: -6px;
+                        width: 6px;
+                    }
+
+                    &:after {
+                        bottom: -6px;
+                        left: 3px;
+                        height: 6px;
+                    }
+                }
+
+                &:active {
+                    margin-top: 8px;
+                    margin-left: 8px;
+                    margin-right: 2px;
+                    margin-bottom: 2px;
+                    filter: drop-shadow(0 0 10px rgba($mid_grey, 1));
+
+                    &:before {
+                        top: 1px;
+                        right: -2px;
+                        width: 2px;
+                    }
+
+                    &:after {
+                        bottom: -2px;
+                        left: 1px;
+                        height: 2px;
+                    }
+                }
+            }
         }
     }
 }
