--- a/sass/layout/_base.scss
+++ b/sass/layout/_base.scss
@@ -51,6 +51,24 @@ strong {
 	margin: 0 auto;
 }
 
+.background-image {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+
+	img {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
+
 .mfp-wrap {
     backdrop-filter: blur(15px);
 }
