--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -158,13 +158,13 @@
             margin: 0 auto;
         }
 
-        .subtitle {
-            font-size: 1.5rem;
-            font-weight: 700;
-            text-transform: uppercase;
-            color: $color_primary;
-            margin-bottom: 0.25rem;
-        }
+        // .subtitle {
+        //     font-size: 1.5rem;
+        //     font-weight: 700;
+        //     text-transform: uppercase;
+        //     color: $color_primary;
+        //     margin-bottom: 0.25rem;
+        // }
 
         .post-title {
             margin-bottom: 0.15rem;
