--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -13,6 +13,7 @@ input[type="submit"] {
 	min-height: 54px;
 	min-width: 224px;
 	padding: 20px;
+	border: 0;
 
 	display: inline-flex;
 	// justify-content: center;
@@ -103,4 +104,8 @@ input[type="submit"] {
 			height: 2px;
 		}
 	}
+}
+
+.fv-button-short {
+	min-width: unset;
 }
