--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -7,3 +7,18 @@ h1, h2, h3, h4, h5, h6 {
 		@include font-size(3.5);
 	}
 }
+
+.title {
+	text-transform: uppercase;
+	// font-size: clamp(4rem, 2.75rem + 3.3333vw, 5.875rem);
+	line-height: 0.9;
+	margin-bottom: 20px;
+}
+
+.subtitle {
+	font-size: 1.5rem;
+	font-weight: 700;
+	text-transform: uppercase;
+	color: $color_primary;
+	margin-bottom: 0.25rem;
+}
